--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,10 @@ flake8 = "^5.0.4"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+known_first_party = "spacebear"
+known_third_party = ""
+multi_line_output = 3
+include_trailing_comma = true
+combine_as_imports = true
