--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ starlette = "^0.20.3"
 websockets = "^10.3"
 hrepr = "^0.5.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
 isort = "^5.10.1"
-flake8 = "^5.0.4"
+flake8-pyproject = "^1.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -27,3 +27,9 @@ known_third_party = ""
 multi_line_output = 3
 include_trailing_comma = true
 combine_as_imports = true
+
+[tool.flake8]
+ignore = "E501,E203,W503,F722"
+per-file-ignores = [
+  "__init__.py:F401"
+]
