--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ hrepr = "^0.5.0"
 black = "^22.8.0"
 isort = "^5.10.1"
 flake8-pyproject = "^1.2.2"
+sphinx = "^5.3.0"
+sphinx-rtd-theme = "^1.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
