--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-uvicorn = "^0.17.6"
-starlette = "^0.20.3"
+uvicorn = ">=0.17.6"
+starlette = ">=0.31.0"
 websockets = "^10.3"
 hrepr = "^0.5.0"
 
