--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = ">=0.17.6"
 starlette = ">=0.31.0"
 websockets = "^10.3"
 hrepr = "^0.6.0"
+lxml = "^4.9.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
