--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ lxml = "^4.9.3"
 ruff = "^0.4.2"
 sphinx = "^5.3.0"
 sphinx-rtd-theme = "^1.1.1"
+pytest = "^8.3.1"
+pytest-cov = "^5.0.0"
+pytest-playwright = "^0.5.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
