--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -62,10 +62,10 @@ jobs:
       run: rye run playwright install ${{ matrix.settings.browser }}
     - name: Test with pytest
       if: ${{ !matrix.settings.coverage }}
-      run: rye run pytest
+      run: rye run pytest --browser ${{ matrix.settings.browser }}
     - name: Test with pytest and coverage
       if: ${{ matrix.settings.coverage }}
-      run: rye run pytest --cov=src --cov-report term-missing
+      run: rye run pytest --cov=src --cov-report term-missing --browser ${{ matrix.settings.browser }}
     - name: Verify coverage
       if: ${{ matrix.settings.coverage }}
       run: rye run coverage report | tail -1 | egrep "TOTAL +[0-9]+ +0 +100%"
