--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "websockets>=12.0",
     "hrepr~=0.7.0",
     "lxml>=5.2.2",
+    "gifnoc>=0.3.4",
+    "pyyaml>=6.0.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.9"
