--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ authors = [
     { name = "Olivier Breuleux", email = "breuleux@gmail.com" }
 ]
 dependencies = [
-    "uvicorn>=0.30.3",
     "starlette>=0.38.1",
     "websockets>=12.0",
     "hrepr~=0.7.0",
@@ -17,6 +16,19 @@ dependencies = [
 readme = "README.md"
 requires-python = ">= 3.9"
 license = "MIT"
+
+[project.scripts]
+starbear = "starbear.__main__:main"
+
+[project.optional-dependencies]
+server = [
+    "jurigged>=0.5.8",
+    "uvicorn>=0.30.3",
+    "authlib>=1.3.1",
+    "itsdangerous>=2.2.0",
+    "sse-starlette>=2.1.2",
+    "watchdog>=4.0.1",
+]
 
 [build-system]
 requires = ["hatchling"]
