--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ server = [
     "jurigged>=0.5.8",
     "uvicorn>=0.30.3",
     "authlib>=1.3.1",
+    "httpx>=0.27.0",
     "itsdangerous>=2.2.0",
     "sse-starlette>=2.1.2",
     "watchdog>=4.0.1",
