--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,21 +8,26 @@ authors = [
 dependencies = [
     "starlette>=0.38.1",
     "websockets>=12.0",
-    "hrepr~=0.7.3",
-    "gifnoc~=0.3.4",
+    "hrepr~=0.8.0",
+    "gifnoc~=0.4.0",
     "lxml>=5.2.2",
     "pyyaml>=6.0.1",
 ]
 readme = "README.md"
-requires-python = ">= 3.9"
+requires-python = ">= 3.10"
 license = "MIT"
+
+[project.urls]
+Homepage = "https://starbear.readthedocs.io/en/latest/"
+Documentation = "https://starbear.readthedocs.io/en/latest/"
+Repository = "https://github.com/breuleux/starbear"
 
 [project.scripts]
 starbear = "starbear.__main__:main"
 
 [project.optional-dependencies]
 server = [
-    "jurigged>=0.5.8",
+    "jurigged~=0.6.0",
     "uvicorn>=0.30.3",
     "authlib>=1.3.1",
     "httpx>=0.27.0",
@@ -35,13 +40,11 @@ server = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.rye]
-managed = true
+[tool.uv]
 dev-dependencies = [
     "pytest>=8.3.2",
     "pytest-cov>=5.0.0",
     "pytest-playwright>=0.5.1",
-    "uv>=0.2.32",
     "sphinx<8",
     "sphinx-rtd-theme>=2.0.0",
 ]
