--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ authors = [
 dependencies = [
     "starlette>=0.38.1",
     "websockets>=12.0",
-    "hrepr~=0.8.0",
-    "gifnoc~=0.4.0",
+    "hrepr~=0.8.1",
+    "gifnoc~=0.4.1",
     "lxml>=5.2.2",
     "pyyaml>=6.0.1",
+    "ovld~=0.4.6",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
