--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,14 @@ authors = [
 dependencies = [
     "starlette>=0.38.1",
     "websockets>=12.0",
-    "hrepr~=0.8.1",
+    "hrepr~=0.9.1",
     "gifnoc~=0.4.1",
     "lxml>=5.2.2",
     "pyyaml>=6.0.1",
-    "ovld~=0.4.6",
+    "ovld~=0.5.13",
 ]
 readme = "README.md"
-requires-python = ">= 3.10"
+requires-python = ">= 3.11"
 license = "MIT"
 
 [project.urls]
@@ -26,6 +26,16 @@ Repository = "https://github.com/breuleux/starbear"
 [project.scripts]
 starbear = "starbear.__main__:main"
 
+[dependency-groups]
+dev = [
+    "playwright==1.52.0",
+    "pytest>=8.3.2",
+    "pytest-cov>=5.0.0",
+    "pytest-playwright>=0.5.1",
+    "sphinx<8",
+    "sphinx-rtd-theme>=2.0.0",
+]
+
 [project.optional-dependencies]
 server = [
     "jurigged~=0.6.0",
@@ -33,22 +43,16 @@ server = [
     "authlib>=1.3.1",
     "httpx>=0.27.0",
     "itsdangerous>=2.2.0",
-    "sse-starlette>=2.1.2",
+    "sse-starlette>=2.1.2,<3.0.0",
     "watchdog>=4.0.1",
 ]
+
+[tool.uv]
+override-dependencies = ["ovld~=0.5.13"]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.uv]
-dev-dependencies = [
-    "pytest>=8.3.2",
-    "pytest-cov>=5.0.0",
-    "pytest-playwright>=0.5.1",
-    "sphinx<8",
-    "sphinx-rtd-theme>=2.0.0",
-]
 
 [tool.hatch.metadata]
 allow-direct-references = true
