--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "starlette>=0.38.1",
     "websockets>=12.0",
     "hrepr~=0.9.1",
-    "gifnoc~=0.4.1",
+    "gifnoc~=0.6.2",
     "lxml>=5.2.2",
     "pyyaml>=6.0.1",
     "ovld~=0.5.13",
@@ -32,6 +32,7 @@ dev = [
     "pytest>=8.3.2",
     "pytest-cov>=5.0.0",
     "pytest-playwright>=0.5.1",
+    "pytest-timeout>=2.4.0",
     "sphinx<8",
     "sphinx-rtd-theme>=2.0.0",
 ]
